2009-09-17  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.8 released.

    * Remove child-exit signal (‘SIGCLD’, ‘SIGCHLD’) from default signal
      map. Thanks to Joel Martin for pinpointing this issue.
    * Document requirement for ensuring any operating-system specific
      signal handlers are considered.
    * Refactor ‘fork_then_exit_parent’ functionality to avoid duplicate
      code.
    * Remove redundant imports.
    * Remove unused code from unit test suite scaffold.
    * Add specific license terms for unit test suite scaffold.

2009-09-03  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.7 released.

2009-09-02  Ben Finney  <ben+python@benfinney.id.au>

    * Fix keywords argument for distribution setup.
    * Exclude ‘test’ package from distribution installation.

2009-07-08  Ben Finney  <ben+python@benfinney.id.au>

    * Implement PIDFileLock.acquire timeout semantics as per ‘lockfile’
      library.

2009-06-21  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.6 released.

    * Update documentation for changes from latest PEP 3143 revision.
    * Implement DaemonContext.is_open method.

2009-05-17  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.5 released.

    * Register DaemonContext.close method for atexit processing.
    * Move PID file cleanup to close method.
    * Improve docstrings by reference to, and copy from, PEP 3143.
    * Use mock checking capabilities of newer ‘MiniMock’ library.
    * Automate building a versioned distribution tarball.
    * Include developer documentation files in source distribution.

2009-03-26  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.4.4 released.

    * Conform to current PEP version, now released as PEP 3143 “Standard
      daemon process library”.
    * Ensure UID and GID are set in correct order.
    * Delay closing all open files until just before re-binding standard
      streams.
    * Redirect standard streams to null device by default.
