@@ -1,3 +1,7 @@
+2009-09-18  Ben Finney  <ben+python@benfinney.id.au>
+
+    * Manage the excluded file descriptors as a set (not a list).
+
 2009-09-17  Ben Finney  <ben+python@benfinney.id.au>
 
     Version 1.4.8 released.
